# Waerable-Robot_ARM

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RobotARM.ioc  STM32G474VETX_FLASH.ld  generate.script  restore_mapping.py
Core/Inc/: FreeRTOSConfig.h  dynamixel.h  stm32g4xx_it.h
Core/Src/: dynamixel.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
EWARM/: Project.eww  RobotARM.ewd  RobotARM.ewp
cmake/: arm-gcc-toolchain.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: README.vscode.md  dynamixel-hand-off.ko.md  project-status-handoff.ko.md  stm32-vscode-workflow.ko.md  진행.txt
